Fix for overflowing portfolio imgs + height fix

--- a/_sass/_portfolio.scss
+++ b/_sass/_portfolio.scss
@@ -27,6 +27,7 @@
     @extend %vertical-rhythm;
     height: 200px;
     border-bottom: 3px solid $brand-colour;
+    overflow: hidden;
     > img {
       width: 100%;
       height: 100%;
@@ -98,7 +99,7 @@
           @include parallax-transform(0.2);
           @include transform-origin(50% 75%);
           height: auto;
-          max-height: 33%;
+          max-height: 500px;
           border-top: 3px solid $brand-colour;
         }
         
